// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`verdict spread > matches the committed snapshot (cramped) 1`] = `
{
  "case": {
    "blocked": 8,
    "ok": 51,
    "unverified": 0,
  },
  "cooler": {
    "blocked": 26,
    "ok": 27,
    "unverified": 0,
  },
  "cpu": {
    "blocked": 54,
    "ok": 25,
    "unverified": 0,
  },
  "fans": {
    "blocked": 0,
    "ok": 42,
    "unverified": 0,
  },
  "gpu": {
    "blocked": 0,
    "ok": 79,
    "unverified": 0,
  },
  "motherboard": {
    "blocked": 57,
    "ok": 13,
    "unverified": 0,
  },
  "paste": {
    "blocked": 0,
    "ok": 15,
    "unverified": 0,
  },
  "psu": {
    "blocked": 0,
    "ok": 53,
    "unverified": 0,
  },
  "ram": {
    "blocked": 17,
    "ok": 35,
    "unverified": 0,
  },
  "storage": {
    "blocked": 0,
    "ok": 52,
    "unverified": 0,
  },
}
`;

exports[`verdict spread > matches the committed snapshot (roomy) 1`] = `
{
  "case": {
    "blocked": 14,
    "ok": 45,
    "unverified": 0,
  },
  "cooler": {
    "blocked": 0,
    "ok": 53,
    "unverified": 0,
  },
  "cpu": {
    "blocked": 54,
    "ok": 25,
    "unverified": 0,
  },
  "fans": {
    "blocked": 0,
    "ok": 42,
    "unverified": 0,
  },
  "gpu": {
    "blocked": 0,
    "ok": 79,
    "unverified": 0,
  },
  "motherboard": {
    "blocked": 37,
    "ok": 33,
    "unverified": 0,
  },
  "paste": {
    "blocked": 0,
    "ok": 15,
    "unverified": 0,
  },
  "psu": {
    "blocked": 0,
    "ok": 53,
    "unverified": 0,
  },
  "ram": {
    "blocked": 17,
    "ok": 35,
    "unverified": 0,
  },
  "storage": {
    "blocked": 0,
    "ok": 52,
    "unverified": 0,
  },
}
`;
